stylesheets/styles.scss
/*
 * Custom SASS variables
 */

$title-color: #997704;
$dark-brown: #251509;

/*
 * Boostrap SASS variables redefinitions
 * (see http://getbootstrap.com/customize/#less-variables)
 */

$font-size-base: 14px;
$navbar-inverse-bg: $dark-brown;
$jumbotron-padding: 10px;
$jumbotron-font-size: ceil(($font-size-base * 1.3));
$jumbotron-heading-color: $title-color;
$blockquote-font-size: $font-size-base;

@import "bootstrap";

/*
 * Globals
 */

body {
  padding-top: 50px;
  word-wrap: break-word;
}

img {
  display: inline-block;
  max-width: 100%;
  height: auto;
}

.logo {
  float: left;
  margin: 10px 20px 0 0;
}

h1, .h1,
h2, .h2,
h3, .h3,
h4, .h4,
h5, .h5,
h6, .h6 {
  margin-top: 0;
  font-weight: normal;
  color: $title-color;
}

@media (min-width: 1200px) {
  .container {
    width: 970px;
  }
}

.center {
  text-align:center;
}

.content > .row > .col-md-9 > .blog-post:first-child {
  padding-top: 20px;
}

/*
 * Sidebar
 */
.sidebar-module {
  padding: 15px;
  margin: 15px -15px 15px;
  background-color: #f5f5f5;
  border-radius: 4px;
}

.sidebar-module-inset p:last-child,
.sidebar-module-inset ul:last-child,
.sidebar-module-inset ol:last-child {
  margin-bottom: 0;
}

/*
 * Pagination
 */

.pagination-links {
  margin: 20px 0;
}

.pagination-links * {
  padding: 10px 16px;
  font-size: 18px;
  border: 1px solid #ddd;
  border-radius: 6px;
}

.skip {
  margin-right: 5px;
}

/*
 * Blog posts
 */

.blog-post-title {
  margin-bottom: 5px;
}

.blog-post-meta {
  margin-bottom: 20px;
  color: #999;
}

.blog-post-meta iframe {
  vertical-align: middle;
}

/*
 * Footer
 */

.footer {
  padding: 20px 0;
  color: $navbar-inverse-color;
  text-align: center;
  background-color: $dark-brown;
  border-top: 1px solid #e5e5e5;
}

.footer p:last-child {
  margin-bottom: 0;
}

/*
 * Team page
 */
.teammember {
  margin-bottom: 2em;
}

.teamheader {
  margin-bottom: 1em;

  h2 {
    display:inline;
    margin-right: 0.5em;
  }

  .teamlinks {
    display:inline-block;
    vertical-align: super;
  }
}

.teamphoto {
  width: 150px;
  height: 150px;
  float: left;
  margin-right: 20px;
  margin-bottom: 10px;
}

